# advent-of-code

./: README.md
2024/: .gitignore  CMakeLists.txt
2024/src/01/: day01a.cc  day01a.js  day01a.m  day01a.py  day01b.cc  day01b.js  day01b.m  day01b.py
2024/src/02/: day02a.cc  day02a.js  day02a.m  day02b.cc  day02b.js  day02b.m
2024/src/03/: day03a.cc  day03a.js  day03a.m  day03a.py  day03b.cc  day03b.js  day03b.m  day03b.py
2024/src/04/: day04a.cc  day04b.cc
2024/src/05/: day05a.cc  day05b.cc
2024/src/06/: day06a.cc  day06b.cc
2024/src/07/: day07a.cc  day07b.cc
2024/src/08/: day08a.py  day08b.py
2024/src/09/: day09a.py  day09b.py
